--- a/www/hg.andstuff.org/index.html
+++ b/www/hg.andstuff.org/index.html
@@ -4,6 +4,7 @@
 <title>Moonen Home Group</title>
 </head>
 <body bgcolor="#2f2f2f">
+<!--
 <center>
 <table width=750 cellpadding=0 cellspacing=0 border=0 class="OuterTable">
 <tr><td><img src="moonengroup.png"></td></tr>
@@ -14,17 +15,16 @@
 <td class="LeftColumn" width="50%" valign="top">
 <h2>Snack Assignments</h2>
 <p><em>Plan snacks only.  Paper products, coffee and tea, and water will be provided by the host.</em></p>
-<!--<h2>Child Care</h2>
-<p><em>Whoever is responsible for snacks is also responsible for child care.</em></p>
--->
 
 <iframe src="//www.google.com/calendar/embed?showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=781u9uu2u3ekkh099lrpsu9bcg%40group.calendar.google.com&amp;color=%23528800&amp;ctz=America%2FNew_York" style=" border-width:0 " width="700" height="500" frameborder="0" scrolling="no"></iframe></td><td class="RightColumn" width="50%" valign="top">
 </td></tr>
 
 </table>
 </td></tr></table>
-</td></tr></table>
-<span class="BottomText">Maintained by Scott Moonen and Luke Ehresman</span><br>
+</td></tr>
+</table>
+<span class="BottomText">Maintained by Scott Moonen</span><br>
 </center>
+-->
 </body>
 </html>
